# quran-app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  k8s.yaml  package-lock.json  package.json  pyproject.toml  quran.conf  quran.conf.example  requirements.txt  suar.html
backend/: __init__.py  check_db.py
backend/alembic/: env.py
backend/alembic/versions/: 075ac2150a2e_add_users_table.py  42a7b5de1c86_initial_empty_migration.py  7c72f47f24b8_add_article_to_concepts.py  b1c2d3e4f5a6_add_verse_embeddings.py  d9bfaa7482a9_add_retrieval_indexes_and_embedding_.py
backend/app/: __init__.py  bootstrap.py  config.py  main.py  session.py
backend/app/api/: __init__.py  admin.py  auth.py  bible.py  ontology_models.py  quran.py  router.py
backend/data/: manual_dump.sh
backend/scripts/: backfill_verse_embeddings.py  create_admin.py
frontend/: App.jsx  AppRoutes.jsx  AuthContext.jsx  Dockerfile  LanguageContext.tsx  Login.jsx  ReaderContext.jsx  Register.jsx  ThemeContext.jsx  api.js  index.css  index.html  package-lock.json  package.json  postcss.config.js  searchMarkup.js  siteLanguage.js  vite.config.js
frontend/components/: ChapterSidebar.jsx  ConceptSidebar.jsx  CopyVerseButton.jsx  ProtectedRoute.jsx  ReaderLayout.jsx  RelatedTags.jsx  ScrollManager.jsx  SearchBar.jsx  SearchResultCard.jsx  SidebarItem.jsx  Spinner.jsx  Verse.jsx  VerseRelated.jsx  a11y.js
frontend/hooks/: useCopyVerse.js
frontend/pages/: bible.jsx
frontend/public/: locales.json
frontend/styles/: reader.css  theme.css
scripts/: build_full_dump.sh  db-setup.sh
(+24 files in other folders)
